fix: remove plan dropdown cropping in addons view TASK-1361 (#5352)
This fixes the unwanted cropping of the plan selection dropdown in
addons view

### 💭 Notes
There was an `overflow-y: auto` style in the dropdown's container class
that was forcing the crop of the list.

--- a/jsapp/js/account/plans/plan.module.scss
+++ b/jsapp/js/account/plans/plan.module.scss
@@ -10,7 +10,6 @@ $plan-badge-height: 38px;
 
 .accountPlan {
   padding: 30px 40px;
-  overflow-y: auto;
   position: relative;
   height: 100%;
   width: 100%;
